Add links to README and adjust formatting.

--- a/README.org
+++ b/README.org
@@ -2,7 +2,9 @@
 
 [[https://travis-ci.org/creichert/http-client-auth][https://travis-ci.org/creichert/http-client-auth.png?branch=master]]
 
-HTTP Basic and Digest Authentication for `http-client` and `http-conduit`.
+HTTP Basic and Digest Authentication for
+[[http-client][https://github.com/snoyberg/http-client]] and
+[[http-conduit][https://github.com/snoyberg/http-client]].
 
 * Example
 
@@ -21,10 +23,8 @@ HTTP Basic and Digest Authentication for `http-client` and `http-conduit`.
 
 /It may be necessary to use `--allow-newer` to build the package./
 
-This repository is a fork of
-[[http://hackage.haskell.org/package/http-client-auth][http-client-auth-0.1.0.0]]
-which has been updated to work with latest GHC and supporting
-libraries.
+This repository is a fork of [[http://hackage.haskell.org/package/http-client-auth][http-client-auth-0.1.0.0]] which has been
+updated to work with latest GHC and supporting libraries.
 
 I have modified the `qop` message in the digest auth request which has
-fixed a bug in my own use cases. See commit a8d542cf.
+fixed a bug in my own use cases. See commit [[https://github.com/creichert/http-client-auth/commit/a8d542cf289cb6946febc129a685b67442a5418a][a8d542cf]]
